# Teslacam

./: .gitignore  AGENTS.md  AI.md  CLAUDE.md  DEBUGGING.md  DESIGN.md  README.md  RELEASE_CHECKLIST.md  VALIDATION.md  improvement.md  pyproject.toml  teslacam-cli  teslacam-cli.bat  teslacam.py  teslacam_legacy_macos.sh
TeslaCam/: AppState.swift  ContentView.swift  IPadMain.swift  Main.swift  MetalPlayerView.swift  MetalPlayerView_iPad.swift  MetalRenderer.swift  Models.swift  NativeExportController.swift  PlatformFileAccess.swift
TeslaCam.xcodeproj/: project.pbxproj
TeslaCamTests/: TeslaCamTests.swift
build-dd/: info.plist
build-dd/ModuleCache.noindex/: AVFAudio-313R1ZXL6UWWFI6Z5OVF2Q5LD.pcm  AVFAudio-AOAX6YUU4X95UK2K2WRUWIUS1.pcm  Accessibility-1O3QC8157QCLT0UOPZ7BW5Y10.pcm  Accessibility-ESMPM4QJHW4C49TXMX6FEMQ1E.pcm  ApplicationServices-6TBYO5QZGU6KQS88TYO1UXV9K.pcm  ApplicationServices-7DE7FA1SVAURNGCCUYQTGN6B9.pcm  AudioToolbox-5ESB0JX1KO7V0FNV3CWX1HHYZ.pcm  AudioToolbox-GVFXLCVVX3TBCO5SV8QDJ2LJ.pcm  CFNetwork-A7SRRACA0P8T6FXOM085IG2X3.pcm  CFNetwork-B3WP3GNRWVVVWHAA5OHX7UUEA.pcm  CUPS-DYKXCSA86TRR8G9ULD4YBY1K4.pcm  CUPS-E2KQHF6U6V4WGY44AIXCEJD3J.pcm  Carbon-2522F7X976EFE5LRTVXBA9SSC.pcm  Carbon-BO8QEDLPTHE7YMS1P9D2TLV17.pcm  ColorSync-3MS1VXXUOCEG8RCG9ZKB5V9S4.pcm  (+100 more)
script/: add_ipad_target.rb  build_and_run.sh  fix_ipad_settings.rb  test_native.sh
teslacam_cli/: cli.py  composer.py  ffmpeg_tools.py  layouts.py  models.py  scanner.py
tests/: __init__.py  test_cli.py  test_integration.py  test_layouts.py  test_scanner.py
(+371 files in other folders)
